# coder

./: .gitignore  A.py  README.md  memo.md  pyproject.toml  tmp.cpp  tmp.py
0806_Beginner/: C.py
0813_Beginner/: B.py
0903_Beginner/: A.py  B.py
1001_Beginner/: A.py  B.py  D.py
1105_Beginner/: A.py  B.py
1119_Beginner/: C.py
1126_Beginner/: B.py  C.py
1203_Beginner/: B.py  C.py  D.py
1210_Beginner/: B.py  C.py  D.py
1217_Beginner/: B.py
Cplus/: student  student.cpp
Cplus/ABC297/ABC297-A/: a.out  ans  main  main.cpp
Cplus/ABC297/ABC297-B/: a.out  main.cpp
Cplus/ABC297/ABC297-C/: a.out  main  main.cpp
Cplus/ABC300-A/: main.cpp
Cplus/ABC300-B/: main.cpp
Cplus/Beginners-Selection/ABC064_A/: main.cpp
Cplus/Beginners-Selection/ABC068-B/: main.cpp
Cplus/Beginners-Selection/ABC069-B/: main.cpp
Cplus/Beginners-Selection/ABC081-A/: a.out  main  main.cpp
Cplus/Beginners-Selection/ABC081-B/: main.cpp
Cplus/Beginners-Selection/ABC082-B/: main.cpp
Cplus/Beginners-Selection/ABC085-A/: main.cpp
Cplus/Beginners-Selection/ABC086-A/: a.out  main  main.cpp
coding_test/: A.py  B.py  C.py  team.py
go/: hello  hello.go
python/: memo.md
python/0813_Beginner/: A.py
python/0903_Beginner/: C.py
python/1203_Beginner/: D_ans.py
python/1217_Beginner/: C.py
python/ABC263/: A.py  B.py
python/ABC271/: C.py
python/ABC275/: B.py  C.py
python/ABC276/: C.py
python/ABC278/: A.py  B.py
python/ABC279/: A.py  D.py
python/ABC280/: A.py
python/ABC281/: A.py
python/ABC282/: A.py  D.py
python/ARC146/: A.py
python/ARC150/: A.py
(+16 files in other folders)
