[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["apuspac <penginstar1299@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
